# wenyuan

./: .dockerignore  .env.example  .gitignore  ANTI_FAKE_AGENTS.md  Cargo.toml  Dockerfile  README.md  README_FOR_AGENTS.md  review.md  roadmap.md  wenyuan-skill.md
.github/workflows/: ci.yml
crates/wenyuan-agent/: Cargo.toml
crates/wenyuan-agent/prompts/: chizheng-v1.md  jingshi-v1.md  mouyuan-v1.md  scribe-v1.md
crates/wenyuan-agent/src/: evidence.rs  followup.rs  json.rs  lib.rs  output.rs  search.rs
crates/wenyuan-app/: Cargo.toml
crates/wenyuan-app/src/: main.rs
crates/wenyuan-core/: Cargo.toml
crates/wenyuan-core/src/: lib.rs
crates/wenyuan-provider/: Cargo.toml
crates/wenyuan-provider/src/: lib.rs  search.rs
crates/wenyuan-runtime/: Cargo.toml
crates/wenyuan-runtime/src/: lib.rs
crates/wenyuan-server/: Cargo.toml
crates/wenyuan-server/src/: lib.rs  main.rs  settings.rs
crates/wenyuan-store/: Cargo.toml
crates/wenyuan-store/migrations/: 001_initial.sql
crates/wenyuan-store/src/: event.rs  execution.rs  lib.rs  migration.rs
crates/wenyuan-tools/: Cargo.toml
crates/wenyuan-tools/src/: lib.rs
desktop/: package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  agent-integration.md  architecture.md  discussion-protocol.md
skill/: SKILL.md
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: preview.html
web/src/: App.vue  api.ts  router.ts  styles.css
web/src/components/: ApiErrorState.test.ts  ApiErrorState.vue  CodeSearchPanel.vue  ConfirmModal.vue  CritiqueGraph.vue  DecisionDigest.vue  DecisionObjectsPanel.vue  DecisionSummary.test.ts  DecisionSummary.vue  DocumentSourcePanel.vue  EvidenceSummary.vue  FollowUpCards.vue  FollowUpTimeline.vue  IdeaCard.vue  PhaseProgressBar.test.ts  PhaseProgressBar.vue  ProposalCompare.vue  ReDeliberationBox.vue  ReportView.vue  SeatRoleCard.test.ts  SeatRoleCard.vue  SeatStatusStrip.test.ts  SeatStatusStrip.vue  ShareExportPanel.vue  VoteChanges.vue  VoteDisplay.vue
web/src/components/charts/: BarChart.vue  DonutChart.vue  RadarChart.vue
web/src/composables/: useConfirm.ts  useViewMode.ts
web/src/domain/: session.test.ts  session.ts
web/src/stores/: sessionStore.test.ts  sessionStore.ts
web/src/utils/: chart-data.ts  markdown.ts
web/src/views/: ConfigView.vue  HistoryView.vue  NewSessionView.vue  PromptLibraryView.vue  SearchTestView.vue  SessionWorkspaceView.vue
