[workspace]
members = [
    "crates/wenyuan-core",
    "crates/wenyuan-provider",
    "crates/wenyuan-agent",
    "crates/wenyuan-store",
    "crates/wenyuan-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.com/wenyuan"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
wenyuan-agent = { path = "crates/wenyuan-agent" }
wenyuan-core = { path = "crates/wenyuan-core" }
wenyuan-provider = { path = "crates/wenyuan-provider" }
wenyuan-store = { path = "crates/wenyuan-store" }
