[package]
name = "wenyuan-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
wenyuan-core.workspace = true
wenyuan-provider.workspace = true
wenyuan-tools.workspace = true
