[package]
name = "wenyuan-provider"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
wenyuan-core.workspace = true
