[package]
name = "wenyuan-server"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wenyuan-agent.workspace = true
wenyuan-core.workspace = true
wenyuan-provider.workspace = true
wenyuan-store.workspace = true
wenyuan-tools.workspace = true
