[package]
name = "wenyuan-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
wenyuan-agent.workspace = true
wenyuan-core.workspace = true
wenyuan-provider.workspace = true
