[package]
name = "wenyuan-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
calamine.workspace = true
chrono.workspace = true
csv.workspace = true
docx-rs.workspace = true
pdf-extract.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
wenyuan-core.workspace = true
