[workspace]
[package]
name = "wenyuan-desktop"
version = "0.1.1"
edition = "2024"

[lib]
name = "wenyuan_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
wenyuan-runtime = { path = "../../crates/wenyuan-runtime" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
url = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
